# neetcode_150

./: .gitignore  README.md
dart/: pubspec.yaml
problems/01_arrays_and_hashing/0001_two_sum/: README.md  solution.dart  solution.py  solution.swift  solution_optimal.dart  solution_optimal.py  solution_optimal.swift
problems/01_arrays_and_hashing/0036_valid_sudoku/: README.md  solution.dart  solution.py  solution.swift  solution_optimal.swift
problems/01_arrays_and_hashing/0049_group_anagrams/: README.md  solution.dart  solution.py  solution.swift  solution_optimal.py
problems/01_arrays_and_hashing/0128_longest_consecutive_sequence/: README.md  solution.dart  solution.py  solution.swift  solution_optimal.py
problems/01_arrays_and_hashing/0217_contains_duplicate/: README.md  solution.dart  solution.py  solution.swift
problems/01_arrays_and_hashing/0238_product_of_array_except_self/: README.md  solution.dart  solution.py  solution.swift  solution_optimal.dart  solution_optimal.py
problems/01_arrays_and_hashing/0242_valid_anagram/: README.md  solution.dart  solution.py  solution.swift  solution_optimal.dart  solution_optimal.py  solution_optimal.swift
problems/01_arrays_and_hashing/0271_encode_and_decode_strings/: README.md  solution.dart  solution.py  solution.swift  solution_optimal.py  solution_optimal.swift
problems/01_arrays_and_hashing/0347_top_k_frequent_elements/: README.md  solution.dart  solution.py  solution.swift  solution_optimal.py
python/: pyproject.toml
scripts/: generate.py  migrate.py
swift/: Package.swift
(+771 files in other folders)
